# weedbot

./: .gitignore  .gitkeep  README.md
src/basic_examples/: CMakeLists.txt  package.xml
src/basic_examples/src/: angle_follower_sample.cpp  opencv_ros2_sample.cpp
src/weed_simulation/: CMakeLists.txt  package.xml
src/weed_simulation/launch/: pointcloud_to_laserscan_launch_weedbot.py  robot_state_publisher.launch.py  spawn_weedbot.launch.py  weedbot_world.py
src/weed_simulation/models/field4/: model.config  model.sdf
src/weed_simulation/models/field4/materials/scripts/: tarla.material
src/weed_simulation/models/x/: model.config  model.sdf
src/weed_simulation/rviz/: weedbot.rviz
src/weed_simulation/src/: delete.py
src/weed_simulation/urdf/: x.urdf  x.urdf.xacro
src/weed_simulation/worlds/: field6.world
